cka/5-ingress/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: ing-internal
spec:
  controller: nginx.org/ingress-controller
